# ttsky-vhdl-501

./: info.yaml
res/ghdl/: CMakeLists.txt  README.md  build.sh
res/ghdl/test/: CMakeLists.txt  top_tb.vhd
res/ghdl/trace/: top_tb.gtkw
src/: project.vhd  project.vhdl  sampler.vhd  top.vhd
test/: Makefile
